--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "nodemon --watch src --ext ts,json --exec 'ts-node src/index.ts'",
     "lint": "eslint . --ext .ts",
     "test": "jest",
     "clean": "rimraf dist"
@@ -38,6 +38,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
