--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "firebase-admin": "^13.4.0",
     "uuid": "^11.1.0",
     "ws": "^8.16.0"
   },
